# AWS-IoT-Blinds-ESP32

udemy_esp32_V1/: CMakeLists.txt  sdkconfig  sdkconfig.old
udemy_esp32_V1/main/: CMakeLists.txt  aws_connection.c  aws_connection.h  main.c  stepper.cpp  stepper.h
